tests/ui/imports/issue-28134.rs
//@ compile-flags: --test

#![test]
//~^ ERROR `test` attribute cannot be used at crate level

// ferrocene-annotations: um_rustc_test
